infrastructure/kitos-dev/kitos/services/kitos-pubsub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    easyhosting.io/service-reference: PubSub.Application.Api/Dockerfile
    easyhosting.io/service-unique-id: d7a6b46d-b788-420b-8ff7-b66d369fd63b
    easyhosting.io/easy-hosting-domain-name: d7a6b46d-b788-420b-8ff7-b66d369fd63b.kitos-dev.strongminds.easyhosting.strongminds.dev
  labels:
    app: kitos-pubsub
  name: kitos-pubsub
  namespace: kitos
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kitos-pubsub
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "false"
      labels:
        app: kitos-pubsub
    spec:
      containers:
      - env:
        - name: PUBSUB_API_KEY
          valueFrom:
            secretKeyRef:
              key: PubSubApiKey
              name: user-secret
        - name: RABBIT_MQ_USER
          valueFrom:
            secretKeyRef:
              key: RabbitMqUsername
              name: user-secret
        - name: RABBIT_MQ_PASSWORD
          valueFrom:
            secretKeyRef:
              key: RabbitMqPassword
              name: user-secret
        - name: ConnectionStrings__DefaultConnection
          valueFrom:
            secretKeyRef:
              key: PubSubConnectionString
              name: user-secret
        - name: ASPNETCORE_ENVIRONMENT
          value: Development
        image: ghcr.io/strongminds/kitos-kitos-pubsub:sha-351beb3bf6143af3912765e5e32e25f147d2d994
        name: kitos-pubsub
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 100m
      imagePullSecrets:
        - name: 90d73529-a238-405b-a079-3eea2e8e36e6
