infrastructure/kitos-dev/kitos/services/kitos-pubsub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitos-pubsub
  namespace: kitos
spec:
  ports:
  - appProtocol: https
    name: https
    port: 7226
    protocol: TCP
    targetPort: 8080
  selector:
    app: kitos-pubsub
  type: ClusterIP
