infrastructure/kitos-dev/kitos/services/kitos-pubsub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: easy-hosting-issuer
  name: kitos-pubsub
  namespace: kitos
spec:
  rules:
  - host: kitos-pubsub.strongminds.tech
    http:
      paths:
      - backend:
          service:
            name: kitos-pubsub
            port:
              name: http
        path: /
        pathType: Prefix
  - host: eb8c7649-da7f-41f1-a266-bc5d4e5bb4d4.kitos-dev.strongminds.easyhosting.strongminds.dev
    http:
      paths:
      - backend:
          service:
            name: kitos-pubsub
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kitos-pubsub.strongminds.tech
    secretName: kitos-pubsub-strongminds-tech-tls
  - hosts:
    - eb8c7649-da7f-41f1-a266-bc5d4e5bb4d4.kitos-dev.strongminds.easyhosting.strongminds.dev
    secretName: eb8c7649-da7f-41f1-a266-bc5d4e5bb4d4-kitos-dev-strongminds-easyhosting-strongminds-dev-tls
