infrastructure/kitos-dev/kitos/services/kitos-pubsub/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: kitos-pubsub
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: kitos
    app.kubernetes.io/managed-by: easy-hosting
    network-policy.kubernetes.io/type: egress
    network-policy.kubernetes.io/purpose: allow-egress
  name: kitos-pubsub-allow-all-egress
  namespace: kitos
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      app: kitos-pubsub
  policyTypes:
  - Egress
